<resources>
    <string name="app_name">Label It!</string>
    <string name="button_save">Save</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="button_fetch">Consultar</string>
    <string name="textViewDefault">Inspirational quote goes here!</string>
    <string name="textViewIdRot">Id do rotulo aqui</string>
    <string name="textViewTextoRot">Texto do rotulo aqui</string>
    <string name="button_tagging">Debug Salvar</string>
    <string name="button_submit">Salvar</string>
    <string name="class_tag">Class</string>
    <string name="file_name">Filename</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="x_max">XMax</string>
    <string name="x_min">XMin</string>
    <string name="y_max">YMax</string>
    <string name="y_min">YMin</string>
    <string name="folder">Folder</string>
    <!--<string name="file_name">Filename</string>-->
    <string name="path">Path</string>
    <string name="database">Database</string>
    <!--<string name="width">Width</string>-->
    <!--<string name="height">Height</string>-->
    <string name="depth">Depth</string>
    <string name="segment">Segment</string>
    <string name="button_document_name">Seleciona DOC</string>
    <string name="button_login">Login</string>
    <string name="button_consult">Debug Consultar</string>
    <string name="button_draw">Rotular</string>
    <string name="new_image">Selecionar nova imagem</string>
    <string name="need_login">Você precisar fazer o Log-in para rotular</string>
    <string name="finish_drawing">Pronto, finalizar rotulação</string>
    <string name="button_delete_tags">Deletar rótulos e sair</string>
    <string name="button_about_main">Sobre</string>
    <string name="logo_ifsp">Logo do IFSP</string>
    <string name="text_about_app">Este sistema de informação foi concebido, projetado e desenvolvido no âmbito do Projeto de Ensino Aprendizagem Baseada em Projeto de Sistema de Informação: relacionando estudantes às demandas do setor produtivo local, realizado no IFSP Câmpus Piracicaba com aporte da Pró-reitoria de Ensino por meio do Edital de Práticas Pedagógicas e Currículos Inovadores (Edital 318/2018).  Bolsista: Vitor Trevisan</string>
    <string name="button_return">Retornar</string>
    <string name="button_voltar_sobre">Voltar</string>
</resources>
